Closed Bug 2052894 Opened 2 months ago Closed 1 month ago

Webrender on Metal ANGLE crashes due to incorrect context type when attempting to migrate GPUs

Categories

(Core :: Graphics, defect)

defect

Tracking

()

RESOLVED FIXED
154 Branch
Tracking Status
firefox154 --- fixed

People

(Reporter: jnicol, Assigned: jnicol)

References

(Blocks 1 open bug)

Details

(Whiteboard: [fxpe])

Attachments

(1 file)

We crash here due to aContext->mGL being a GLContextEGL rather than GLContextCGL.

This only occurs when running with the GPU process disabled, due to bug 2052891.

Long term we need to find an alternative to GPU switching on Metal ANGLE (something like "option B" in bug 1600178), but in the short term we're going to ship only on single-GPU devices. We should therefore check the context type before calling this function, avoiding the crash.

With not yet landed patches to enable Metal ANGLE, we crash due to an
invalid GLContext cast when attempting to migrate GPUs. This only
occurs when the GPU process is disabled, due to bug 2052891.

Longer term, we need to find an alternative to GPU switching when
running on Metal ANGLE, as Metal does not have an equivalent API to
CGLSetVirtualScreen(). In the short term, however, we will keep Metal
ANGLE disabled on multi-GPU devices, so can simply avoid calling this
function for non-CGL contexts.

Assignee: nobody → jnicol
Status: NEW → ASSIGNED
Pushed by jnicol@mozilla.com: https://github.com/mozilla-firefox/firefox/commit/df41d7417f64 https://hg.mozilla.org/integration/autoland/rev/e1ded6b37563 Avoid crash when attempting to migrate GPUs with ANGLE on macOS. r=gfx-reviewers,lsalzman
Status: ASSIGNED → RESOLVED
Closed: 1 month ago
Resolution: --- → FIXED
Target Milestone: --- → 154 Branch
QA Whiteboard: [qa-triage-done-c155/b154]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: