Bug 2052894 - Avoid crash when attempting to migrate GPUs with ANGLE on macOS. r=gfx-reviewers,lsalzman

With not yet landed patches to enable Metal ANGLE, we crash due to an
invalid GLContext cast when attempting to migrate GPUs. This only
occurs when the GPU process is disabled, due to bug 2052891.

Longer term, we need to find an alternative to GPU switching when
running on Metal ANGLE, as Metal does not have an equivalent API to
CGLSetVirtualScreen(). In the short term, however, we will keep Metal
ANGLE disabled on multi-GPU devices, so can simply avoid calling this
function for non-CGL contexts.

Differential Revision: https://phabricator.services.mozilla.com/D310669